--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,6 @@
             <h1 class="header">Ana Pineda</h1>
             <!--top right about, portfolio, contact (linking to each)-->
             <div class="links">
-
                 <a href="contact.html" title="Contact" class="contact">Contact</a>
                 <div class="separator"> | </div>
                 <a href="portfolio.html" title="Portfolio" class="portfolio"> Portfolio</a>
@@ -25,7 +24,7 @@
             </div>
         </div>
         <hr>
-        <div class="whiteBox">
+        <div class="whiteBox clearfix">
             <!--white box with grey border-->
             <h1 class="aboutMe">Contact</h1>
             <!--About Me in green-->
@@ -33,18 +32,18 @@
             <div class=".contactContainer">
                 <form action="/action_page.php">
                   <label for="name">Name</label>
-                  <div></div>
-                  <input type="text" id="fname" name="firstname" placeholder="Your name..">
-                    <div></div>
+                  <div class="space"></div>
+                  <input type="text" class="" name="firstname" placeholder="John Smith">
+                    <div class="space"></div>
                   <label for="lname">Last Name</label>
-                  <div></div>
-                  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-                    <div></div>
+                  <div class="space"></div>
+                  <input type="text" id="" name="lastname" placeholder="example@gmail.com">
+                    <div class="space"></div>
                   <label for="country">Message</label>
-                  <div></div>
-                  <input type+"text" id="message" name="message" placeholder= "Message:">
-                
-                  <input type="submit" value="Submit">
+                  <div class="space"></div>
+                  <input type="text" id="message" name="message" class="message">
+                  <div class="space"></div>
+                  <input type="submit" value="Submit" class="submit">
                 </form>
               </div>
 
@@ -54,11 +53,11 @@
         <div></div>
         <!--whole text-->
         <p></p>
-        <footer>
-            <div class="greenBar"></div>
-        </footer>
 
     </div>
+    <footer>
+        <div class="greenBar"></div>
+    </footer>
 </body>
 
 </html>
