--- a/index.html
+++ b/index.html
@@ -10,50 +10,62 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="top">
-        <!--green box-->
-        <h1 class="header">Ana Pineda</h1>
-        <!--top right about, portfolio, contact (linking to each)-->
-        <div class="links">
+    <div class="container">
+        <div class="top">
+            <!--green box-->
+            <h1 class="header">Ana Pineda</h1>
+            <!--top right about, portfolio, contact (linking to each)-->
+            <div class="links">
 
-            <a href="contact.html" title="Contact" class="contact">Contact</a>
-            <div class="separator"> | </div>
-            <a href="portfolio.html" title="Portfolio" class="portfolio"> Portfolio</a>
-            <div class="separator"> | </div>
-            <a href="index.html" title="About" class="about">About</a>
+                <a href="contact.html" title="Contact">Contact</a>
+                <div class="separator"> | </div>
+                <a href="portfolio.html" title="Portfolio"> Portfolio</a>
+                <div class="separator"> | </div>
+                <a href="index.html" title="About">About</a>
+            </div>
+        </div>
+        <hr>
+        <div class="whiteBox clearfix">
+            <!--white box with grey border-->
+            <h1 class="aboutMe">About Me</h1>
+            <!--About Me in green-->
+            <div class="greyLine"></div>
+            <img src="assets/images/Profile pic.JPG" class="profilePic">
+            <p class="text">
+                Hello, My name is Ana Michelle Pineda. I am 29 years old. I was born in Veracruz, Mexico. I've lived in
+                many
+                cool places such as Mexico City, Cabo San Lucas, Barcelona, Czech Republic, and since 2014 I've lived in
+                Irvine, Orange, Costa Mesa, Palm Desert and currently Huntington Beach.</p>
+            <p class="text"> My dad is Mexican and my mom is American. They live in Mexico with their dog,
+                Milly
+                and their 5 cats. My brother is 31 years old and lives in Alexandria, Virginia and is looking to move to
+                Colorado soon. Laura, my sister, is 26 and currently going to school to become a physical therapist. My
+                cat
+                Penny has been my little bestie for 3 years now. I think bestie is said loosely, we are frenemies too, I
+                don't think I've ever forgiven anyone for making me bleed so much. </p>
+            <p class="textTwo">I am currently a Sales Manager at Marriott. I've been an event planner and sales manager
+                for
+                about 5 years now, but decided to shake things up by taking this course. Currently having a lot of fun
+                learning and enjoying the rush of solving a difficult puzzle. Although doing this homework I've been
+                thinkin coding consists of an elaborate combination of feelings. I can go from neutral to wanting to
+                throw my laptop, to extreme excitement, to crashing wanting to take a nap, possibly all within an hour.
+                But I like it, I'm having fun doing this. I
+            </p>
+
         </div>
     </div>
-    <hr>
-    <div class="whiteBox">
-        <!--white box with grey border-->
-        <h1 class="aboutMe">About Me</h1>
-        <!--About Me in green-->
-        <div class="greyLine"></div>
-        <img src="assets/images/Profile pic.JPG" class="profilePic">
-        <p class="textOne">
-            Hello, My name is Ana Michelle Pineda. I am 29 years old. I was born in Veracruz, Mexico. I've lived in many
-            cool places such as Mexico City, Cabo San Lucas, Barcelona, Czech Republic, and since 2014 I've lived in
-            Irvine, Orange, Costa Mesa, Palm Desert and currently Huntington Beach.</p>
-        <p class="textOnePointOne"> My dad is Mexican and my mom is American. They live in Mexico with their dog, Milly
-            and their 5 cats. My brother is 31 years old and lives in Alexandria, Virginia and is looking to move to
-            Colorado soon. Laura, my sister, is 26 and currently going to school to become a physical therapist. My cat
-            Penny has been my little bestie for 3 years now.</p>
-        <p class="textTwo">I am currently a Sales Manager at Marriott. I've been an event planner and sales manager for
-            about 5 years now, but decided to shake things up by taking this course. Currently having a lot of fun
-            learning and enjoying the rush of solving a difficult puzzle.
-        </p>
+        <!--line-->
+        <div></div>
+        <!--whole text-->
+        <p></p>        
+<div class = "what"></div>
+        <footer>
+           
+            <div class="greenBar"></div>
 
-    </div>
-    <!--line-->
-    <div></div>
-    <!--whole text-->
-    <p></p>
-<footer>   
-<div class="greenBar"></div>
-</footer> 
+        </footer>
 
-</div>
+   
 </body>
 
 </html>
